--- a/vault-auditor/package.json
+++ b/vault-auditor/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "axios-rate-limit": "^1.4.0",
+    "dotenv": "^16.4.5",
     "json2csv": "^6.0.0-alpha.2",
     "pg": "^8.13.0"
   }
